Change support Link to correct one and consolidate it

--- a/ChatManager/App.config
+++ b/ChatManager/App.config
@@ -25,6 +25,9 @@
             <setting name="logPath" serializeAs="String">
                 <value />
             </setting>
+            <setting name="supportPath" serializeAs="String">
+                <value>https://github.com/Zagrthos/SWTOR-ChatManager/issues</value>
+            </setting>
         </ChatManager.Properties.Settings>
     </userSettings>
 </configuration>
