--- a/ChatManager/App.config
+++ b/ChatManager/App.config
@@ -28,6 +28,9 @@
             <setting name="supportPath" serializeAs="String">
                 <value>https://github.com/Zagrthos/SWTOR-ChatManager/issues</value>
             </setting>
+            <setting name="bugPath" serializeAs="String">
+                <value>https://github.com/Zagrthos/SWTOR-ChatManager/issues/new/choose</value>
+            </setting>
         </ChatManager.Properties.Settings>
     </userSettings>
 </configuration>
