Added Logos, About Page and updated Updater

--- a/ChatManager/App.config
+++ b/ChatManager/App.config
@@ -4,14 +4,14 @@
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
             <section name="ChatManager.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="ChatManager.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
     </configSections>
     <userSettings>
         <ChatManager.Properties.Settings>
             <setting name="localPath" serializeAs="String">
                 <value />
-            </setting>
-            <setting name="filesChecked" serializeAs="String">
-                <value>False</value>
             </setting>
             <setting name="backupPath" serializeAs="String">
                 <value />
@@ -25,12 +25,19 @@
             <setting name="logPath" serializeAs="String">
                 <value />
             </setting>
+        </ChatManager.Properties.Settings>
+    </userSettings>
+    <applicationSettings>
+        <ChatManager.Properties.Settings>
             <setting name="supportPath" serializeAs="String">
                 <value>https://github.com/Zagrthos/SWTOR-ChatManager/issues</value>
             </setting>
             <setting name="bugPath" serializeAs="String">
                 <value>https://github.com/Zagrthos/SWTOR-ChatManager/issues/new/choose</value>
             </setting>
+            <setting name="copyrightPicture" serializeAs="String">
+                <value>https://unsplash.com/de/fotos/PEJtZfT6C1Q</value>
+            </setting>
         </ChatManager.Properties.Settings>
-    </userSettings>
+    </applicationSettings>
 </configuration>
