--- a/.github/workflows/Issue_Cleaning.yml
+++ b/.github/workflows/Issue_Cleaning.yml
@@ -11,24 +11,29 @@ jobs:
         uses: actions/github-script@v5
         with:
           script: |
-            console.log(github);
-            const issue = context.payload.issue;
-            const description = issue.body.replace(/Sent by \[.*@.*\]/g, '');
-            const updatedIssue = await github.issues.update({
-              ...context.repo,
-              issue_number: issue.number,
-              body: description.trim()
-            });
-            const editHistory = await github.issues.listEvents({
-              ...context.repo,
-              issue_number: issue.number
-            });
-            if (editHistory.data.length > 1) {
-              const latestEdit = editHistory.data[0];
-              await github.issues.deleteComment({
+            async function run() {
+              const issue = context.payload.issue;
+              const description = issue.body.replace(/Sent by \[.*@.*\]/g, '');
+              const update = github.issues.update.bind(github.issues);
+              const updatedIssue = await update({
                 ...context.repo,
-                comment_id: latestEdit.id
+                issue_number: issue.number,
+                body: description.trim()
               });
+              const listEvents = github.issues.listEvents.bind(github.issues);
+              const editHistory = await listEvents({
+                ...context.repo,
+                issue_number: issue.number
+              });
+              if (editHistory.data.length > 1) {
+                const latestEdit = editHistory.data[0];
+                const deleteComment = github.issues.deleteComment.bind(github.issues);
+                await deleteComment({
+                  ...context.repo,
+                  comment_id: latestEdit.id
+                });
+              }
             }
+            run();
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
