--- a/.github/workflows/Issue_Cleaning.yml
+++ b/.github/workflows/Issue_Cleaning.yml
@@ -30,4 +30,4 @@ jobs:
               });
             }
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.P_A_T }}
