Added new way (email) to post bugs

--- a/ChatManager/App.config
+++ b/ChatManager/App.config
@@ -38,6 +38,9 @@
             <setting name="copyrightPicture" serializeAs="String">
                 <value>https://unsplash.com/de/fotos/PEJtZfT6C1Q</value>
             </setting>
+            <setting name="bugMailPath" serializeAs="String">
+                <value>mailto:swtor-chatmanager@fire.fundersclub.com?subject=[BUG]</value>
+            </setting>
         </ChatManager.Properties.Settings>
     </applicationSettings>
 </configuration>
