--- a/ChatManager/App.config
+++ b/ChatManager/App.config
@@ -30,13 +30,13 @@
     <applicationSettings>
         <ChatManager.Properties.Settings>
             <setting name="supportPath" serializeAs="String">
-                <value>https://github.com/Zagrthos/SWTOR-ChatManager/issues</value>
+                <value>https://github.com/Zagrthos/SWTOR-ChatColorManager/issues/</value>
             </setting>
             <setting name="bugPath" serializeAs="String">
-                <value>https://github.com/Zagrthos/SWTOR-ChatManager/issues/new/choose</value>
+                <value>https://github.com/Zagrthos/SWTOR-ChatColorManager/issues/new/choose</value>
             </setting>
             <setting name="copyrightPicture" serializeAs="String">
-                <value>https://unsplash.com/de/fotos/PEJtZfT6C1Q</value>
+                <value>https://unsplash.com/photos/PEJtZfT6C1Q</value>
             </setting>
             <setting name="bugMailPath" serializeAs="String">
                 <value>mailto:swtor-chatmanager@fire.fundersclub.com?subject=[BUG]</value>
