--- a/ChatManager/ChatManager.csproj
+++ b/ChatManager/ChatManager.csproj
@@ -11,9 +11,9 @@
     <ProduceReferenceAssembly>False</ProduceReferenceAssembly>
     <EnforceCodeStyleInBuild>True</EnforceCodeStyleInBuild>
     <AnalysisLevel>latest</AnalysisLevel>
-	<Version>1.1.0</Version>
-	<FileVersion>1.1.0.0</FileVersion>
-	<AssemblyVersion>1.1.0.0</AssemblyVersion>
+	<Version>1.1.1</Version>
+	<FileVersion>1.1.1.0</FileVersion>
+	<AssemblyVersion>1.1.1.0</AssemblyVersion>
 	<Authors>Zagrthos</Authors>
 	<Product>SWTOR Chat Manager</Product>
 	<Copyright>© Zagrthos 2023</Copyright>
@@ -62,6 +62,15 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="Localization\de.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Localization\en.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Localization\fr.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
