Add first preview of localization

--- a/ChatManager/App.config
+++ b/ChatManager/App.config
@@ -25,6 +25,9 @@
             <setting name="logPath" serializeAs="String">
                 <value />
             </setting>
+            <setting name="_selectedLocale" serializeAs="String">
+                <value />
+            </setting>
         </ChatManager.Properties.Settings>
     </userSettings>
     <applicationSettings>
