--- a/ChatManager/App.config
+++ b/ChatManager/App.config
@@ -25,7 +25,7 @@
             <setting name="logPath" serializeAs="String">
                 <value />
             </setting>
-            <setting name="_selectedLocale" serializeAs="String">
+            <setting name="_locale" serializeAs="String">
                 <value />
             </setting>
         </ChatManager.Properties.Settings>
