--- a/ChatManager/Properties/Settings.settings
+++ b/ChatManager/Properties/Settings.settings
@@ -29,7 +29,7 @@
     <Setting Name="bugMailPath" Type="System.String" Scope="Application">
       <Value Profile="(Default)">mailto:swtor-chatmanager@fire.fundersclub.com?subject=[BUG]</Value>
     </Setting>
-    <Setting Name="_selectedLocale" Type="System.String" Scope="User">
+    <Setting Name="_locale" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
   </Settings>
