Add a first implementation of a working settings menu (without working settings)

--- a/ChatManager/App.config
+++ b/ChatManager/App.config
@@ -28,6 +28,15 @@
             <setting name="_locale" serializeAs="String">
                 <value />
             </setting>
+            <setting name="_autosave" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="_autosaveInterval" serializeAs="String">
+                <value>1</value>
+            </setting>
+            <setting name="_saveOnClose" serializeAs="String">
+                <value>False</value>
+            </setting>
         </ChatManager.Properties.Settings>
     </userSettings>
     <applicationSettings>
