--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,13 +8,13 @@ updates:
   - package-ecosystem: "github-actions" # See documentation for possible values
     directory: "/" # Location of package manifests
     schedule:
-      interval: "weekly"
+      interval: "daily"
     assignees:
     - "zagrthos"
       
   - package-ecosystem: "nuget" # See documentation for possible values
     directory: "/ChatManager" # Location of package manifests
     schedule:
-      interval: "weekly"
+      interval: "daily"
     assignees:
     - "zagrthos"
