--- a/ChatManager/App.config
+++ b/ChatManager/App.config
@@ -37,6 +37,9 @@
             <setting name="_saveOnClose" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="autosavePath" serializeAs="String">
+                <value />
+            </setting>
         </ChatManager.Properties.Settings>
     </userSettings>
     <applicationSettings>
