--- a/ChatManager/Properties/Settings.settings
+++ b/ChatManager/Properties/Settings.settings
@@ -41,5 +41,8 @@
     <Setting Name="_saveOnClose" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="autosavePath" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
