Rework Checks of Folders

--- a/ChatManager/App.config
+++ b/ChatManager/App.config
@@ -32,13 +32,16 @@
                 <value>False</value>
             </setting>
             <setting name="_autosaveInterval" serializeAs="String">
-                <value>10</value>
+                <value>1</value>
             </setting>
             <setting name="_saveOnClose" serializeAs="String">
                 <value>False</value>
             </setting>
             <setting name="autosavePath" serializeAs="String">
                 <value />
+            </setting>
+            <setting name="autosaveAvailability" serializeAs="String">
+                <value>False</value>
             </setting>
         </ChatManager.Properties.Settings>
     </userSettings>
