Implement RestoreOnStartup Setting

--- a/ChatManager/App.config
+++ b/ChatManager/App.config
@@ -43,6 +43,9 @@
             <setting name="autosaveAvailability" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="_reloadOnStartup" serializeAs="String">
+                <value>False</value>
+            </setting>
         </ChatManager.Properties.Settings>
     </userSettings>
     <applicationSettings>
