Fix Reset Settings Button

--- a/ChatManager/App.config
+++ b/ChatManager/App.config
@@ -46,6 +46,9 @@
             <setting name="_reloadOnStartup" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="_reset" serializeAs="String">
+                <value>False</value>
+            </setting>
         </ChatManager.Properties.Settings>
     </userSettings>
     <applicationSettings>
