--- a/ChatManager/Properties/Settings.settings
+++ b/ChatManager/Properties/Settings.settings
@@ -50,5 +50,8 @@
     <Setting Name="_reloadOnStartup" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="_reset" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
