Add Settings Upgrade so no more losing Settings after Updates

--- a/ChatManager/App.config
+++ b/ChatManager/App.config
@@ -49,6 +49,9 @@
             <setting name="_reset" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="_upgradeRequired" serializeAs="String">
+                <value>True</value>
+            </setting>
         </ChatManager.Properties.Settings>
     </userSettings>
     <applicationSettings>
