Implement the functionality of the updateIntervall setting

--- a/ChatManager/App.config
+++ b/ChatManager/App.config
@@ -52,6 +52,12 @@
             <setting name="_upgradeRequired" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="updateIntervall" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="lastUpdateCheck" serializeAs="String">
+                <value />
+            </setting>
         </ChatManager.Properties.Settings>
     </userSettings>
     <applicationSettings>
