Rename Update Interval

--- a/ChatManager/App.config
+++ b/ChatManager/App.config
@@ -52,7 +52,7 @@
             <setting name="_upgradeRequired" serializeAs="String">
                 <value>True</value>
             </setting>
-            <setting name="updateIntervall" serializeAs="String">
+            <setting name="updateInterval" serializeAs="String">
                 <value />
             </setting>
             <setting name="lastUpdateCheck" serializeAs="String">
