--- a/ChatManager/Properties/Settings.settings
+++ b/ChatManager/Properties/Settings.settings
@@ -56,7 +56,7 @@
     <Setting Name="_upgradeRequired" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
-    <Setting Name="updateIntervall" Type="System.String" Scope="User">
+    <Setting Name="updateInterval" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
     <Setting Name="lastUpdateCheck" Type="System.DateTime" Scope="User">
