Fully implemented the manual update download setting

--- a/ChatManager/App.config
+++ b/ChatManager/App.config
@@ -58,6 +58,9 @@
             <setting name="lastUpdateCheck" serializeAs="String">
                 <value />
             </setting>
+            <setting name="updateDownload" serializeAs="String">
+                <value>False</value>
+            </setting>
         </ChatManager.Properties.Settings>
     </userSettings>
     <applicationSettings>
