Fix Update Intervall being not set automatically

--- a/ChatManager/App.config
+++ b/ChatManager/App.config
@@ -53,7 +53,7 @@
                 <value>True</value>
             </setting>
             <setting name="updateInterval" serializeAs="String">
-                <value />
+                <value>OnStartup</value>
             </setting>
             <setting name="lastUpdateCheck" serializeAs="String">
                 <value />
