Add deletion of last update File

--- a/ChatManager/App.config
+++ b/ChatManager/App.config
@@ -61,6 +61,9 @@
             <setting name="updateDownload" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="lastUpdatePath" serializeAs="String">
+                <value />
+            </setting>
         </ChatManager.Properties.Settings>
     </userSettings>
     <applicationSettings>
