--- a/ChatManager/Properties/Settings.settings
+++ b/ChatManager/Properties/Settings.settings
@@ -65,5 +65,8 @@
     <Setting Name="updateDownload" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="lastUpdatePath" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
