Add new button to GitHub Repo in AboutForm

--- a/ChatManager/App.config
+++ b/ChatManager/App.config
@@ -80,6 +80,9 @@
             <setting name="bugMailPath" serializeAs="String">
                 <value>mailto:swtor-chatmanager@fire.fundersclub.com?subject=[BUG]</value>
             </setting>
+            <setting name="githubPath" serializeAs="String">
+                <value>https://github.com/Zagrthos/SWTOR-ChatColorManager/</value>
+            </setting>
         </ChatManager.Properties.Settings>
     </applicationSettings>
 </configuration>
