--- a/.github/workflows/securitycodescan.yml
+++ b/.github/workflows/securitycodescan.yml
@@ -24,6 +24,11 @@ jobs:
       - uses: actions/checkout@v3
       - uses: nuget/setup-nuget@v1
       - uses: microsoft/setup-msbuild@v1
+      - uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: |
+            3.1.x
+            7.0.x
 
       - name: Set up projects for analysis
         uses: security-code-scan/security-code-scan-add-action@v1
