Change font of ColorPicker to SWTOR font

--- a/ChatManager/ChatManager.csproj
+++ b/ChatManager/ChatManager.csproj
@@ -72,6 +72,9 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
+    <None Update="Resources\Font.ttf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
