--- a/ChatManager/runtimeconfig.template.json
+++ b/ChatManager/runtimeconfig.template.json
@@ -1,19 +1,10 @@
 ﻿{
-  "runtimeOptions": {
-    "tfm": "net7.0",
-    "frameworks": [
-      {
-        "name": "Microsoft.NETCore.App",
-        "version": "7.0.0"
-      },
-      {
-        "name": "Microsoft.WindowsDesktop.App",
-        "version": "7.0.0"
-      }
-    ],
     "configProperties": {
-      "System.Net.Http.SocketsHttpHandler.Http2Support": true,
-      "System.Windows.Forms.ScaleTopLevelFormMinMaxSizeForDpi": true
+        "System.Runtime.TieredCompilation": true,
+        "System.Runtime.TieredCompilation.QuickJit": true,
+        "System.Runtime.TieredCompilation.QuickJitForLoops": true,
+        "System.Globalization.Invariant": false,
+        "System.Net.Http.SocketsHttpHandler.Http2Support": true,
+        "System.Windows.Forms.ScaleTopLevelFormMinMaxSizeForDpi": true
     }
-  }
 }
