--- a/ChatManager/ChatManager.csproj
+++ b/ChatManager/ChatManager.csproj
@@ -12,31 +12,41 @@
     <EnforceCodeStyleInBuild>True</EnforceCodeStyleInBuild>
     <ProduceReferenceAssembly>False</ProduceReferenceAssembly>
     <Authors>Zagrthos</Authors>
-    <Version>1.6.1</Version>
+    <Version>1.6.2</Version>
     <Copyright>© Zagrthos 2024</Copyright>
     <Product>SWTOR Chat Manager</Product>
     <Description>A GUI Manager for customizing the SWTOR Chat.</Description>
     <RepositoryUrl>https://github.com/Zagrthos/SWTOR-ChatColorManager</RepositoryUrl>
     <PathMap>$(MSBuildProjectDirectory)\$(IntermediateOutputPath)=.</PathMap>
-    <AnalysisLevel>latest</AnalysisLevel>
+    <AnalysisLevel>latest-all</AnalysisLevel>
     <Configurations>Debug;Release</Configurations>
     <ApplicationIcon>Resources\Logo.ico</ApplicationIcon>
     <UseWindowsForms>true</UseWindowsForms>
     <NeutralLanguage>en</NeutralLanguage>
     <IncludeSourceRevisionInInformationalVersion>false</IncludeSourceRevisionInInformationalVersion>
     <ForceDesignerDPIUnaware>true</ForceDesignerDPIUnaware>
+    <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <CheckForOverflowUnderflow>True</CheckForOverflowUnderflow>
+    <DebugType>embedded</DebugType>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <CheckForOverflowUnderflow>True</CheckForOverflowUnderflow>
+    <DebugType>embedded</DebugType>
   </PropertyGroup>
 
   <ItemGroup>
     <Content Include="Resources\Logo.ico" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\LICENSE.txt">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
