--- a/ChatManager/ChatManager.csproj
+++ b/ChatManager/ChatManager.csproj
@@ -10,6 +10,7 @@
     <IsPublishable>True</IsPublishable>
     <Platforms>x64</Platforms>
     <EnforceCodeStyleInBuild>True</EnforceCodeStyleInBuild>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
     <ProduceReferenceAssembly>False</ProduceReferenceAssembly>
     <Authors>Zagrthos</Authors>
     <Version>1.6.2</Version>
